site1/virtservices-distribute-details.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: open5gs-nrf
  namespace: prod1-5gcore
spec:
  hosts:
    - open5gs-nrf.prod1-5gcore.svc.cluster.local
  http:
    - route:
        - destination:
            host: open5gs-nrf.prod1-5gcore.svc.cluster.local
          weight: 60
        - destination:
            host: open5gs-nrf-remote.prod1-5gcore.svc.prod2-mesh-imports.local
          weight: 40
