site1/vs-mirror-details.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: open5gs-upf
  namespace: prod1-5gcore
spec:
  hosts:
    - open5gs-upf.prod1-5gcore.svc.cluster.local
  http:
    - mirror:
        host: open5gs-upf-v2.prod1-5gcore.svc.prod2-mesh-imports.local
      route:
        - destination:
            host: open5gs-upf.prod1-5gcore.svc.cluster.local
            subset: v1
          weight: 100
